--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^16.13.1"
   },
   "scripts": {
-    "server": "nodemon server.js",
+    "server": "nodemon index.js",
     "start": "react-scripts-start",
     "build": "react-scripts build",
     "test": "react-scripts test",
