--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^16.13.1"
   },
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "react-scripts start",
+    "server": "nodemon server.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
